--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <title>Maestri - Управление Салоном Красоты</title>
 <style>
 body {
