Добавил ссылки на eula-agreement и privacy-policy

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ color: white;
 <li><strong>Maestri</strong></li>
 </ul>
 <ul>
-<li><a href="#">Главная</a></li>
-<li><a href="#">Функции</a></li>
+<li><a href="/legal/eula-agreement.pdf">Agreement</a></li>
+<li><a href="/legal/privacy-policy.pdf">Политика конфиденциальности</a></li>
 <li><a href="#" role="button">Контакты</a></li>
 </ul>
 </nav>
