fix(tilda-code): link from en to ru

--- a/en.html
+++ b/en.html
@@ -1094,7 +1094,7 @@
                      data-field-top-res-320-value="9px" data-field-top-res-640-value="16px" data-field-top-value="16"
                      data-field-topunits-value="px" data-field-width-res-320-value="65"
                      data-field-width-value="79" data-field-widthunits-value="px"
-                ><a class='tn-atom' href="/ru"><img alt=''
+                ><a class='tn-atom' href="/"><img alt=''
                                                     class='tn-atom__img'
                                                     imgfield='tn_img_1702231891581' src='images/tild6530-3365-4933-b738-306338383665__logo-white.svg'/></a></div>
                 <div class='t396__elem tn-elem show-light tn-elem__6852562481701765545800' data-elem-id='1701765545800'
@@ -1125,7 +1125,7 @@
                      data-field-leftunits-value="px" data-field-top-res-320-value="5" data-field-top-value="16"
                      data-field-topunits-value="px" data-field-width-value="12"
                      data-field-widthunits-value="px"
-                ><a class='tn-atom' href="/ru">ru</a></div>
+                ><a class='tn-atom' href="/">ru</a></div>
                 <div class='t396__elem tn-elem tn-elem__6852562481701864548208' data-elem-id='1701864548208'
                      data-elem-type='shape' data-field-axisx-value="left" data-field-axisy-value="top"
                      data-field-container-value="grid" data-field-height-value="6" data-field-heightunits-value="px"
@@ -2074,7 +2074,7 @@
                      data-field-top-value="16" data-field-topunits-value="px"
                      data-field-width-res-320-value="21" data-field-width-value="17"
                      data-field-widthunits-value="px"
-                ><a class='tn-atom' href="/ru">ru</a></div>
+                ><a class='tn-atom' href="/">ru</a></div>
                 <div class='t396__elem tn-elem shape-show-light tn-elem__6852562501702039354148'
                      data-elem-id='1702039354148' data-elem-type='shape' data-field-axisx-res-320-value="center"
                      data-field-axisx-value="left" data-field-axisy-res-320-value="center" data-field-axisy-value="top"
@@ -11633,7 +11633,7 @@
                      data-field-top-value="32" data-field-topunits-value="px"
                      data-field-width-res-320-value="180" data-field-width-res-640-value="210"
                      data-field-width-value="225" data-field-widthunits-value="px"
-                ><a class='tn-atom' href="/ru"><img alt=''
+                ><a class='tn-atom' href="/"><img alt=''
                                                     class='tn-atom__img'
                                                     imgfield='tn_img_1702232446817' src='images/tild3339-3864-4738-b136-653134303166__logo-white.svg'/></a></div>
                 <div class='t396__elem tn-elem shape-show-light tn-elem__6852562891701796311518'
